@@ -5,13 +5,16 @@ class FrontpageView(BrowserView):
     """Frontpage view
     """
 
-    def columns_class(self):
+    def columns_class(self):        
         ploneview = self.context.restrictedTraverse('@@plone')
         cols = ['frontpage.portlets.left',
                 'frontpage.portlets.central',
                 'frontpage.portlets.right']
-        i = 0
+        i = 0        
         for manager in cols:
             if ploneview.have_portlets(manager, self):
-                i+=1
-        return 'width-%s' % (16/i)
+                i+=1                
+        if i != 0:
+            return 'width-%s' % (16/i)
+        else:
+            return False
